--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,3 +1,11 @@
 .site{
     padding-left: 25px;
+    padding-top: 0px;
+}
+
+.site b{
+    margin-bottom: -20px;
+}
+.errorLogin{
+    color: rgb(194, 0, 0);
 }
