--- a/src/App.css
+++ b/src/App.css
@@ -19,13 +19,16 @@ background-color: #F7F8F9;
   background-color: green;
 }
 .header img {
-  width: 90px;
-  height: 70px;
+  width:210px; 
+  height: 50px;
+  margin-top: 5px;
+  margin-left: 10px;
 }
 
 .nav {
   grid-area: n;
   background-color: burlywood;
+  padding: 5px 15px; 
 }
 
 .content {
@@ -40,3 +43,4 @@ background-color: #F7F8F9;
 footer {
   grid-area: f;
 }
+
