--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   grid-template-areas:
   "h h"
   "n c"
-  "f f";
+  "n f";
 
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
@@ -40,7 +40,7 @@ background-color: #F7F8F9;
   right: 0;
 }
 
-footer {
+footer{
   grid-area: f;
 }
 
