--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,19 +1,86 @@
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 
-.social {
-    display: inline-block;
+  
+  .container {
     text-align: center;
-    width: 48px;
-    height: 48px;
-    background: #fff;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.15), inset 0 0 50px rgba(0,0,0,0.1);
-    border-radius: 24px;
-    margin: 0 10px 10px 0;
-    padding: 6px;
-    color: #000;
-}
-.github a:hover {background: #191919; color: #fff;}
-.facebook a:hover {background: #3b5998; color: #fff;}
-.skype a:hover {background: #00aff0; color: #fff;}
-.telegram a:hover {background: #249bd7; color: #fff;}
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    max-height: 80px;
+  }
+  
+  ul.submenu {
+    /* background-color: #212121; */
+    border: 1px solid black;
+    border-radius: 5px;
+    display: inline-block;
+    padding: 4px 10px;
+    margin: 0;
+    overflow: hidden;
+  }
+  ul.submenu li {
+    display: inline-block;
+  }
+  ul.submenu li a i.fa {
+    padding: 10px;
+    display: inline-block;
+    border: 1px solid transparent;
+/*     color: #ccc; */
+    height: 30px;
+    width: 30px;
+    border-radius: 50px;
+    margin: 10px;
+    text-align: center;
+    line-height: 30px;
+    position: relative;
+    z-index: 2;
+  }
+  ul.submenu li a i.fa::after {
+    content: "";
+    height: 0%;
+    width: 0%;
+    position: absolute;
+    top: -500%;
+    bottom: -500%;
+    left: -500%;
+    right: -500%;
+    margin: auto;
+    border: 0px solid transparent;
+    border-radius: 200px;
+    opacity: 0;
+    z-index: -1;
+    transition: all ease 0.5s;
+  }
+  ul.submenu li a:hover i.fa::before {
+    color: #fff;
+  }
+  ul.submenu li a:hover i.fa-facebook::after {
+    height: 200%;
+    width: 200%;
+    background-color: #3b5998;
+    border-radius: 0px;
+    opacity: 1;
+  }
+  ul.submenu li a:hover i.fa-twitter::after {
+    height: 200%;
+    width: 200%;
+    background-color: #1dcaff;
+    border-radius: 0px;
+    opacity: 1;
+  }
+  ul.submenu li a:hover i.fa-google-plus::after {
+    height: 200%;
+    width: 200%;
+    background-color: #d34836;
+    border-radius: 0px;
+    opacity: 1;
+  }
+  ul.submenu li a:hover i.fa-instagram::after {
+    height: 200%;
+    width: 200%;
+    background-color: #8a3ab9;
+    border-radius: 0px;
+    opacity: 1;
+  }
