--- a/src/components/Friends/Users.css
+++ b/src/components/Friends/Users.css
@@ -21,6 +21,7 @@
 .paginationWrapper {
     text-align: center;
     margin: 40px 0;
+    background: url(https://html5book.ru/wp-content/uploads/2015/07/background39.png);
   }
   
 .pagination {
@@ -56,3 +57,40 @@
     border: none;
     background-color: #d3d3d3;
     }
+
+.horizontLine{
+    border-top: 1px solid black;
+    width: 500px;
+    margin: auto;
+    margin-top: 15px;
+    padding-bottom: 50px;
+}
+
+
+
+
+.floating-button {
+    text-decoration: none;
+    display: inline-block;
+    width: 140px;
+    height: 45px;
+    line-height: 45px;
+    border-radius: 45px;
+    margin: 10px 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 3px;
+    font-weight: 600;
+    color: #524f4e;
+    background: white;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+    transition: .3s;
+  }
+  .floating-button:hover {
+    background: #2EE59D;
+    box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
+    color: white;
+    transform: translateY(-7px);
+  }
